Name:                   hdye
Version:                0.0.0
Author:                 palik <info at maximka.de>
Maintainer:             palik <info at maximka.de>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.20
Build-Type:             Simple
data-dir:               data
data-files:             *.yml

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src/lib
  GHC-Options:          -Wall
  Exposed-Modules:      My.Yaml.User
  Build-Depends:        base == 4.*,
                        yaml

executable hdye
  default-language:     Haskell2010
  main-is:              Main.hs
  hs-source-dirs:       src, src/lib
  build-depends:        base == 4.*,
                        bytestring,
                        yaml

Source-Repository head
  Type:                 git
--  Location:             
